New:
----

Added experimental InfoViewer for the ServerGUI (Just click a players name)
New feature "MessageBlocks". Update your Config and use /MessageBlock or /Mb
Added a checkbox in the config to set ranks as hidden.
Physics states now save on shutdown, due to popular demand
Unlimited doors
Improved portals

New command /Wset [Hidden, greeting, backups]
- Set backup delays for a world
- Set a greeting for a world

Improved performance for BlockDB:
- Updated the BlockDB main code for higher performance and better use of resources
- Updated all BlockDB commands: (/UndoPlayer, /UndoArea, /Banx, /Bi)
- Removed command /Guestwipe (Discontinued)
- Added commands /UndoPlayer * TimeSpan (For undoing EVERYONE (replaces Guestwipe))
- Added UndoAreaNot and UndoPlayerNot
- New permission UndoAll


Fixes:
------

Fixed a in /Env, if no args followed
Fixed realm state serialization (Use /fixrealms after updating to update the needed changes)
Fixed a few problems if the ServerGUI was to shutdown unexpectedly early
Save heartbeatsaver data more regularly

Changed:
--------

Removed redundant command /RankHide. (Replaced in ConfigGUI)
PortalDB.txt is no longer needed, you can delete it
Removed /Tower (Discontinued)
Changed /Tempban so it uses fCraft's unsupported BannedUntil field. Users are unbanned when duration as expired (unbanned upon connecting)
Removed /WHide, /WUnhide. They are now part of /WSet
Changed /WhoIs to show 15 results per page (was 30)
Updated /List emotes
Removed WoM Direct support
Doors are now unlimited
Portals can now exit anywhere in a world or target world